--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ad",
   "private": true,
   "version": "0.0.0",
+    "proxy":"https://api.skilljar.com",
   "type": "module",
   "scripts": {
     "dev": "vite",
